@@ -1,3 +1,13 @@
+2011-08-30  Chris Rogers  <crogers@google.com>
+
+        Don't allow nodes of one context to be connected to nodes of another context
+        https://bugs.webkit.org/show_bug.cgi?id=67245
+
+        Reviewed by Dimitri Glazkov.
+
+        * webaudio/audionode-expected.txt:
+        * webaudio/audionode.html:
+
 2011-08-30  Aaron Colwell  <acolwell@chromium.org>
 
         Add MediaSource API to HTMLMediaElement
